Fix overflow behavior on rotate, reverting overflow-wrap.

--- a/assets/generic-functions-and-methods/index.css
+++ b/assets/generic-functions-and-methods/index.css
@@ -219,6 +219,7 @@ pre {
         display: block;
         width: 1.8em;
         transform: rotate(-90deg) translate(-1.2em);
+        overflow-wrap: initial;
     }
 }
 
